--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.6
+  dio: ^5.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
